...
                        <connections>
                            <outlet property="dataSource" destination="2Ie-96-eIN" id="8eG-ik-Qxa"/>
                            <outlet property="delegate" destination="2Ie-96-eIN" id="NzQ-U6-dcL"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Voices" id="Zbm-Dz-9pb">
                        <barButtonItem key="rightBarButtonItem" title="Record new Voice" id="fKg-aU-72k">
                            <connections>
                                <action selector="RecordNewVoiceButtonPressed:" destination="2Ie-96-eIN" id="eYb-fd-Gci"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
...
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="NmJ-IK-9rD" firstAttribute="centerX" secondItem="420-qp-RIW" secondAttribute="centerX" id="Mmd-8T-bH4"/>
                            <constraint firstItem="420-qp-RIW" firstAttribute="bottom" secondItem="NmJ-IK-9rD" secondAttribute="bottom" constant="75" id="lis-5Z-xxp"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Recording" id="W3m-LO-3sK"/>
                    <connections>
                        <outlet property="recordButton" destination="NmJ-IK-9rD" id="qmv-19-7vY"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="CNh-JD-hMm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lm2-ck-Rwc">
                                <rect key="frame" x="25" y="588" width="200" height="200"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="200" id="kGq-Qs-6go"/>
                                    <constraint firstAttribute="width" constant="200" id="mz5-PS-zhe"/>
                                </constraints>
                                <state key="normal" title="play" image="play_1"/>
                                <connections>
                                    <action selector="playButtonPushed:" destination="1N9-po-06I" eventType="touchUpInside" id="cTa-vi-VNe"/>
                                </connections>
                            </button>
                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="FaP-GC-HuJ">
                                <rect key="frame" x="20" y="564" width="374" height="4"/>
...
                                <connections>
                                    <action selector="deleteButtonPushed:" destination="1N9-po-06I" eventType="touchUpInside" id="KMy-VP-cTu"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t6p-Ct-uaH">
                                <rect key="frame" x="20" y="485" width="70" height="30"/>
                                <state key="normal" title="transcribe"/>
                                <connections>
                                    <action selector="transcribeButtonPushed:" destination="1N9-po-06I" eventType="touchUpInside" id="WJh-iC-HZ6"/>
                                </connections>
                            </button>
                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Dyp-j1-bG9">
                                <rect key="frame" x="45" y="490" width="20" height="20"/>
...
                            <constraint firstItem="kZf-fg-EdP" firstAttribute="top" secondItem="t6p-Ct-uaH" secondAttribute="bottom" constant="8" symbolic="YES" id="qU4-I5-kfw"/>
                            <constraint firstItem="lm2-ck-Rwc" firstAttribute="leading" secondItem="ucT-Sb-xnE" secondAttribute="leading" constant="25" id="t8N-eW-GJM"/>
                            <constraint firstItem="ucT-Sb-xnE" firstAttribute="trailing" secondItem="cyd-ti-orb" secondAttribute="trailing" constant="20" id="ush-ly-Pfe"/>
                        </constraints>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Listening" id="HHP-fd-hTe"/>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="languagePickerView" destination="OxC-Im-xAe" id="Wp8-gO-mhA"/>
                        <outlet property="listeningProgressBar" destination="FaP-GC-HuJ" id="wsM-lU-U2T"/>
                        <outlet property="playPauseButton" destination="lm2-ck-Rwc" id="fPk-OR-xpZ"/>
                        <outlet property="timeInfoLabel" destination="cyd-ti-orb" id="jfb-Cw-ywD"/>
...
